kubernetes/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    service: api
spec:
  selector:
    app: api
  ports:
  - port: 5000
    targetPort: 5000
